# Sigmod3

./: .gitignore
.github/workflows/: debug-ssh.yml  deploy.yml
back/: .env.example  README.md  migrate.py  pyproject.toml  requirements.txt
back/app/: db.py  dependencies.py  main.py  models.py  schemas.py
back/app/api/: router.py
back/app/api/routes/: anexos_01.py  auth.py  autorizaciones.py  catalogos.py  catalogos_auxiliares.py  catalogos_estados.py  catalogos_figuras.py  catalogos_localidades.py  catalogos_municipios.py  catalogos_tipos_fcoop.py  configuracion_sistema.py  control_mecanico.py  control_quimico.py  dashboard.py  estimados_cosecha.py  identificaciones.py  identificaciones_lab.py  modulos.py  muestreos_frutos.py  productores.py  reportes_v3.py  revisiones.py  rutas.py  sistema_version.py  solicitudes.py  superficies.py  tipos_trampa.py  tmimfs.py  trampas.py  tramperos.py  unidades_produccion.py
back/app/api/routes/legacy/: __init__.py  auth.py  cancelacion_tmimf.py  catalogo_huertos.py  catalogos.py  catalogos_auxiliares.py  correcciones.py  correcciones_estimado_cosecha.py  correcciones_muestreo.py  correcciones_tmimf_o.py  correcciones_trampas.py  dashboard.py  dashboard_muestreo.py  dashboard_trampeos.py  dependencies.py  helpers.py  informe_general.py  reportes.py  reportes_documentos.py  reportes_estimado_cosecha.py  reportes_informes_semanales.py  reportes_inventario.py  reportes_resumen_diario.py  reportes_tmimf.py
back/app/core/: captcha.py  config.py  legacy_audit.py  legacy_db.py  legacy_security.py  rate_limit.py  security.py  senasica.py
back/migrations/: 2026-03-08_multiestado.sql  2026-03-08_normalizacion_estatus_id.sql  2026-03-08_roles_registro.sql  2026-03-08_solicitud_acceso_multiestado.sql  2026-03-09_regeneracion_solicitudes.sql  2026-03-09_relaciones_pendientes.sql  2026-03-09_solicitud_localidad_modulo.sql  2026-03-09_solicitud_modulos_detalle.sql  2026-03-09_solicitud_municipios_detalle.sql  2026-03-10_auditoria_fechas_global.sql  2026-03-10_catalogo_figura_cooperadora.sql  2026-03-10_catalogo_tipos_fcoop.sql  2026-03-10_catalogos_base_auditoria.sql  2026-03-10_correcciones_estructura_fase1.sql  2026-03-10_correcciones_estructura_fase2_status.sql  2026-03-10_figura_cooperadora_autorizacion_clave_oficio.sql  2026-03-10_localidades_performance.sql  2026-03-10_usuarios_figura_cooperadora.sql  2026-04-20_legacy_databases.sql  2026-04-20_schema_migrations.sql  2026-04-23_legacy_audit_log.sql  2026-04-25_usuarios_rol_varchar50.sql  2026-04-26_estados_participa_sigmod.sql  2026-04-26_productores_v3_enrichment.sql  2026-04-26_senasica_audit_log.sql  2026-04-26_unidades_produccion_v3_enrichment.sql  2026-04-26_v3_catalogos_auxiliares.sql  2026-04-27_rutas_v3_enrichment.sql  2026-04-28_anexos_01_v3_enrichment.sql  2026-04-28_controles_v3_enrichment.sql  2026-04-28_estimados_superficies_v3_enrichment.sql  2026-04-28_identificaciones_lab_v3_enrichment.sql  2026-04-28_muestreos_v3_enrichment.sql  2026-04-28_normalizar_figura_cooperadora_id_unsigned.sql  2026-04-28_revisiones_identificaciones_v3_enrichment.sql  2026-04-28_sistema_version.sql  2026-04-28_tmimf_v3_enrichment.sql  2026-04-28_trampas_v3_enrichment.sql  README.md
back/tests/: test_api_smoke.py  test_catalogos_auxiliares.py  test_catalogos_mappers.py  test_legacy_audit.py  test_legacy_security.py  test_rate_limit.py  test_security.py
front/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
front/src/: App.tsx  (+1 more)
(+118 files in other folders)
